--- a/src/main/resources/i18n/index_en_US.properties
+++ b/src/main/resources/i18n/index_en_US.properties
@@ -1,7 +1,14 @@
+index.back=Back
 index.birthday=Birthday
+index.boy=boy
+index.dontnosex=secret
 index.email=Email address
 index.Enteremail=Enter email
+index.forgetPassword=Forget password
+index.girl=girl
 index.home=Home
+index.hot=Hot
+index.lebel=Lebel
 index.message=Message reminder
 index.myhome=My Home
 index.Password=Password
