--- a/src/main/resources/i18n/index_zh_CN.properties
+++ b/src/main/resources/i18n/index_zh_CN.properties
@@ -1,7 +1,14 @@
+index.back=\u8FD4\u56DE
 index.birthday=\u751F\u65E5
+index.boy=\u5973
+index.dontnosex=\u4FDD\u5BC6
 index.email=\u90AE\u7BB1\u5730\u5740
 index.Enteremail=\u8F93\u5165\u4F60\u7684\u90AE\u7BB1
+index.forgetPassword=\u5FD8\u8BB0\u5BC6\u7801
+index.girl=\u5973
 index.home=\u4E3B\u9875
+index.hot=\u70ED\u95E8
+index.lebel=\u5206\u7C7B 
 index.message=\u6D88\u606F\u63D0\u9192
 index.myhome=\u6211\u7684\u4E3B\u9875
 index.Password=\u5BC6\u7801
@@ -11,10 +18,10 @@ index.search=\u641C\u7D22
 index.search.placeholder=\u641C\u7D22\u95EE\u9898
 index.setting=\u8BBE\u7F6E
 index.signIn=\u767B\u9646
-index.signin.welcome=\u6B22\u8FCE\u767B\u9646\u4E0D\u6302\u9AD8\u6570\u8BBA\u575B
+index.signin.welcome=\u6B22\u8FCE\u767B\u9646\u4E0D\u6302\u9AD8\u6570\u793E\u533A
 index.signout=\u9000\u51FA\u767B\u9646
 index.signup=\u6CE8\u518C
 index.signup.rember=\u8BB0\u4F4F\u6211
-index.signup.welocme=\u6B22\u8FCE\u6CE8\u518C\u4E0D\u6302\u9AD8\u6570\u8BBA\u575B
+index.signup.welocme=\u6B22\u8FCE\u6CE8\u518C\u4E0D\u6302\u9AD8\u6570\u793E\u533A
 index.title=\u4E0D\u6302\u9AD8\u6570\u793E\u533A
 index.userName=\u7528\u6237\u540D
