--- a/src/main/resources/i18n/index.properties
+++ b/src/main/resources/i18n/index.properties
@@ -10,6 +10,7 @@ index.home=\u4E3B\u9875
 index.hot=\u70ED\u95E8
 index.lebel=\u5206\u7C7B
 index.message=\u6D88\u606F\u63D0\u9192
+index.my=\u6211
 index.myhome=\u6211\u7684\u4E3B\u9875
 index.Password=\u5BC6\u7801
 index.Password2=\u8BF7\u518D\u8F93\u5165\u4E00\u904D\u5BC6\u7801
