--- a/src/main/resources/i18n/index_en_US.properties
+++ b/src/main/resources/i18n/index_en_US.properties
@@ -10,6 +10,7 @@ index.home=Home
 index.hot=Hot
 index.lebel=Lebel
 index.message=Message reminder
+index.my=my
 index.myhome=My Home
 index.Password=Password
 index.Password2=Please input your password again
