add publish page

--- a/src/main/resources/i18n/index_en_US.properties
+++ b/src/main/resources/i18n/index_en_US.properties
@@ -8,8 +8,9 @@ index.forgetPassword=Forget password
 index.girl=girl
 index.home=Home
 index.hot=Hot
+index.issue=Issue
 index.lebel=Lebel
-index.message=Message reminder
+index.message=Message 
 index.my=my
 index.myhome=My Home
 index.Password=Password
@@ -26,3 +27,4 @@ index.signup.rember=Remember me
 index.signup.welocme=Please sign up
 index.title=Buguagaoshu Community
 index.userName=User Name
+index.writePost=Write a post
