--- a/src/main/resources/i18n/index_zh_CN.properties
+++ b/src/main/resources/i18n/index_zh_CN.properties
@@ -8,8 +8,9 @@ index.forgetPassword=\u5FD8\u8BB0\u5BC6\u7801
 index.girl=\u5973
 index.home=\u4E3B\u9875
 index.hot=\u70ED\u95E8
+index.issue=\u95EE\u9898
 index.lebel=\u5206\u7C7B 
-index.message=\u6D88\u606F\u63D0\u9192
+index.message=\u6D88\u606F
 index.my=\u6211
 index.myhome=\u6211\u7684\u4E3B\u9875
 index.Password=\u5BC6\u7801
@@ -26,3 +27,4 @@ index.signup.rember=\u8BB0\u4F4F\u6211
 index.signup.welocme=\u6B22\u8FCE\u6CE8\u518C\u4E0D\u6302\u9AD8\u6570\u793E\u533A
 index.title=\u4E0D\u6302\u9AD8\u6570\u793E\u533A
 index.userName=\u7528\u6237\u540D
+index.writePost=\u53D1\u5E16
