add publish page

--- a/src/main/resources/i18n/index_en_US.properties
+++ b/src/main/resources/i18n/index_en_US.properties
@@ -28,3 +28,15 @@ index.signup.welocme=Please sign up
 index.title=Buguagaoshu Community
 index.userName=User Name
 index.writePost=Write a post
+publish.classification=Classification
+publish.issue.addTag=Add tag
+publish.issue.CAPTCHA=CAPTCHA
+publish.issue.chooseFile=Choose File
+publish.issue.splitTag=Labels are separated by spaces
+publish.issue.submit=Submit
+publish.issue.supportFile=Support file JPG,JPEG,PNG,GIF,ZIP,DOC,DOCX,PDF,RAR,PSD,PPT,PPTX,XLS,XLSX,APK
+publish.issue.text=Issue details
+publish.issue.title=Issue title(Simple and concise)
+publish.issue.Title=Issue title
+publish.issue.updatefile=Update file
+publish.publish=Publish
