--- a/src/main/resources/i18n/index.properties
+++ b/src/main/resources/i18n/index.properties
@@ -28,3 +28,16 @@ index.signup.welocme=\u6B22\u8FCE\u6CE8\u518C\u4E0D\u6302\u9AD8\u6570\u793E\u533
 index.title=\u4E0D\u6302\u9AD8\u6570\u793E\u533A
 index.userName=\u7528\u6237\u540D
 index.writePost=\u53D1\u5E16
+publish.classification=\u5206\u7C7B
+publish.issue.addTag=\u6DFB\u52A0\u6807\u7B7E\uFF1A
+publish.issue.CAPTCHA=\u9A8C\u8BC1\u7801
+publish.issue.chooseFile=\u9009\u62E9\u6587\u4EF6
+publish.issue.choseFile=
+publish.issue.splitTag=\u6807\u7B7E\u4EE5\u7A7A\u683C\u9694\u5F00
+publish.issue.submit=\u63D0\u4EA4
+publish.issue.supportFile=\u652F\u6301 JPG,JPEG,PNG,GIF,ZIP,DOC,DOCX,PDF,RAR,PSD,PPT,PPTX,XLS,XLSX,APK
+publish.issue.text=\u95EE\u9898\u8865\u5145(\u5FC5\u586B\uFF0C\u8BF7\u53C2\u7167\u53F3\u4FA7\u63D0\u793A):
+publish.issue.title=\u95EE\u9898\u6807\u9898\uFF08\u7B80\u5355\u627C\u8981\uFF09\uFF1A
+publish.issue.Title=\u95EE\u9898\u6807\u9898
+publish.issue.updatefile=\u4E0A\u4F20\u9644\u4EF6
+publish.publish=\u53D1\u8D77
