--- a/src/main/resources/i18n/index_zh_CN.properties
+++ b/src/main/resources/i18n/index_zh_CN.properties
@@ -29,12 +29,16 @@ index.title=\u4E0D\u6302\u9AD8\u6570\u793E\u533A
 index.userName=\u7528\u6237\u540D
 index.writePost=\u53D1\u5E16
 publish.classification=\u5206\u7C7B
+publish.classification.program=\u7F16\u7A0B
+publish.classification.water=\u6C34
 publish.issue.addTag=\u6DFB\u52A0\u6807\u7B7E\uFF1A
 publish.issue.CAPTCHA=\u9A8C\u8BC1\u7801
 publish.issue.chooseFile=\u9009\u62E9\u6587\u4EF6
 publish.issue.splitTag=\u6807\u7B7E\u4EE5\u7A7A\u683C\u9694\u5F00
 publish.issue.submit=\u63D0\u4EA4
-publish.issue.supportFile=\u652F\u6301 JPG,JPEG,PNG,GIF,ZIP,DOC,DOCX,PDF,RAR,PSD,PPT,PPTX,XLS,XLSX,APK
+publish.issue.supportFile=\u652F\u6301 JPG, JPEG, PNG, GIF, ZIP, DOC, DOCX, PDF, RAR, PSD,\
+PPT, PPTX, XLS, XLSX, APK
+publish.issue.supportFileTitle=\u652F\u6301\u7684\u6587\u4EF6\u683C\u5F0F
 publish.issue.text=\u95EE\u9898\u8865\u5145(\u5FC5\u586B\uFF0C\u8BF7\u53C2\u7167\u53F3\u4FA7\u63D0\u793A):
 publish.issue.title=\u95EE\u9898\u6807\u9898\uFF08\u7B80\u5355\u627C\u8981\uFF09\uFF1A
 publish.issue.Title=\u95EE\u9898\u6807\u9898
