--- a/src/main/resources/i18n/index_en_US.properties
+++ b/src/main/resources/i18n/index_en_US.properties
@@ -10,6 +10,7 @@ index.home=Home
 index.hot=Hot
 index.issue=Issue
 index.lebel=Lebel
+index.major=Major
 index.message=Message 
 index.my=my
 index.myhome=My Home
@@ -26,6 +27,7 @@ index.signup=Sign Up
 index.signup.rember=Remember me
 index.signup.welocme=Please sign up
 index.title=Buguagaoshu Community
+index.userId=User ID
 index.userName=User Name
 index.writePost=Write a post
 publish.classification=Classification
