--- a/src/main/resources/i18n/index_zh_CN.properties
+++ b/src/main/resources/i18n/index_zh_CN.properties
@@ -10,6 +10,7 @@ index.home=\u4E3B\u9875
 index.hot=\u70ED\u95E8
 index.issue=\u95EE\u9898
 index.lebel=\u5206\u7C7B 
+index.major=\u4E13\u4E1A
 index.message=\u6D88\u606F
 index.my=\u6211
 index.myhome=\u6211\u7684\u4E3B\u9875
@@ -26,7 +27,8 @@ index.signup=\u6CE8\u518C
 index.signup.rember=\u8BB0\u4F4F\u6211
 index.signup.welocme=\u6B22\u8FCE\u6CE8\u518C\u4E0D\u6302\u9AD8\u6570\u793E\u533A
 index.title=\u4E0D\u6302\u9AD8\u6570\u793E\u533A
-index.userName=\u7528\u6237\u540D
+index.userId=\u7528\u6237\u540D\uFF08\u8D26\u53F7\uFF09
+index.userName=\u6635\u79F0
 index.writePost=\u53D1\u5E16
 publish.classification=\u5206\u7C7B
 publish.classification.program=\u7F16\u7A0B
