添加相关问题

--- a/src/main/resources/i18n/index.properties
+++ b/src/main/resources/i18n/index.properties
@@ -37,7 +37,7 @@ publish.issue.addTag=\u6DFB\u52A0\u6807\u7B7E\uFF1A
 publish.issue.CAPTCHA=\u9A8C\u8BC1\u7801
 publish.issue.chooseFile=\u9009\u62E9\u6587\u4EF6
 publish.issue.choseFile=
-publish.issue.splitTag=\u6807\u7B7E\u4EE5\u7A7A\u683C\u9694\u5F00
+publish.issue.splitTag=\u6807\u7B7E\u4EE5 , \u9694\u5F00
 publish.issue.submit=\u63D0\u4EA4
 publish.issue.supportFile=\u652F\u6301 JPG, JPEG, PNG, GIF, ZIP, DOC, DOCX, PDF, RAR, PSD,\
 PPT, PPTX, XLS, XLSX, APK
