--- a/src/main/resources/i18n/index_en_US.properties
+++ b/src/main/resources/i18n/index_en_US.properties
@@ -36,7 +36,7 @@ publish.classification.water=Water
 publish.issue.addTag=Add tag
 publish.issue.CAPTCHA=CAPTCHA
 publish.issue.chooseFile=Choose File
-publish.issue.splitTag=Labels are separated by spaces
+publish.issue.splitTag=Labels are separated by ,
 publish.issue.submit=Submit
 publish.issue.supportFile=Support file JPG, JPEG, PNG, GIF, ZIP, DOC, DOCX, PDF, RAR, PSD,\
 PPT, PPTX, XLS, XLSX, APK
