--- a/src/main/resources/i18n/index_en_US.properties
+++ b/src/main/resources/i18n/index_en_US.properties
@@ -18,7 +18,7 @@ index.Password=Password
 index.Password2=Please input your password again
 index.school=School
 index.search=Search
-index.search.placeholder=Search problem
+index.search.placeholder=Search problem or user
 index.setting=Setting
 index.signIn=Sign In
 index.signin.welcome=Please sign in
