--- a/src/main/resources/i18n/index_zh_CN.properties
+++ b/src/main/resources/i18n/index_zh_CN.properties
@@ -18,7 +18,7 @@ index.Password=\u5BC6\u7801
 index.Password2=\u8BF7\u518D\u8F93\u5165\u4E00\u904D\u5BC6\u7801
 index.school=\u5B66\u6821
 index.search=\u641C\u7D22
-index.search.placeholder=\u641C\u7D22\u95EE\u9898
+index.search.placeholder=\u641C\u7D22\u95EE\u9898\u95EE\u9898\u7528\u6237\u6216
 index.setting=\u8BBE\u7F6E
 index.signIn=\u767B\u9646
 index.signin.welcome=\u6B22\u8FCE\u767B\u9646\u4E0D\u6302\u9AD8\u6570\u793E\u533A
