添加主页头部导航

--- a/src/main/resources/i18n/index.properties
+++ b/src/main/resources/i18n/index.properties
@@ -27,6 +27,7 @@ index.signup=\u6CE8\u518C
 index.signup.rember=\u8BB0\u4F4F\u6211
 index.signup.welocme=\u6B22\u8FCE\u6CE8\u518C\u4E0D\u6302\u9AD8\u6570\u793E\u533A
 index.title=\u4E0D\u6302\u9AD8\u6570\u793E\u533A
+index.user=\u7528\u6237
 index.userId=\u7528\u6237\u540D\uFF08\u8D26\u53F7\uFF09
 index.userName=\u6635\u79F0
 index.writePost=\u53D1\u5E16
