--- a/src/main/resources/i18n/index_en_US.properties
+++ b/src/main/resources/i18n/index_en_US.properties
@@ -27,6 +27,7 @@ index.signup=Sign Up
 index.signup.rember=Remember me
 index.signup.welocme=Please sign up
 index.title=Buguagaoshu Community
+index.user=User
 index.userId=User ID
 index.userName=User Name
 index.writePost=Write a post
