完成一个简单的分类页面

--- a/src/main/resources/i18n/index_zh_CN.properties
+++ b/src/main/resources/i18n/index_zh_CN.properties
@@ -9,7 +9,7 @@ index.girl=\u5973
 index.home=\u4E3B\u9875
 index.hot=\u70ED\u95E8
 index.issue=\u95EE\u9898
-index.lebel=\u5206\u7C7B 
+index.lebel=\u8BDD\u9898
 index.major=\u4E13\u4E1A
 index.message=\u6D88\u606F
 index.my=\u6211
