🔧 修复HTTP请求头

--- a/src/main/resources/i18n/index.properties
+++ b/src/main/resources/i18n/index.properties
@@ -40,8 +40,8 @@ publish.issue.chooseFile=\u9009\u62E9\u6587\u4EF6
 publish.issue.choseFile=
 publish.issue.splitTag=\u8F93\u5165\u540E\u56DE\u8F66
 publish.issue.submit=\u63D0\u4EA4
-publish.issue.supportFile=\u652F\u6301 JPG, JPEG, PNG, GIF, ZIP, DOC, DOCX, PDF, RAR, PSD,\
-PPT, PPTX, XLS, XLSX, APK
+publish.issue.supportFile=\u652F\u6301 JPG, JPEG, PNG, GIF, ZIP, DOC, DOCX, PDF, RAR, 7z\
+PPT, PPTX, XLS, XLSX, APK, mp4, mp3, wav
 publish.issue.supportFileTitle=\u652F\u6301\u7684\u6587\u4EF6\u683C\u5F0F
 publish.issue.text=\u95EE\u9898\u8865\u5145(\u5FC5\u586B\uFF0C\u8BF7\u53C2\u7167\u53F3\u4FA7\u63D0\u793A):
 publish.issue.title=\u95EE\u9898\u6807\u9898\uFF08\u7B80\u5355\u627C\u8981\uFF09\uFF1A
