--- a/src/main/resources/i18n/index_en_US.properties
+++ b/src/main/resources/i18n/index_en_US.properties
@@ -39,8 +39,8 @@ publish.issue.CAPTCHA=CAPTCHA
 publish.issue.chooseFile=Choose File
 publish.issue.splitTag=Enter after input
 publish.issue.submit=Submit
-publish.issue.supportFile=Support file JPG, JPEG, PNG, GIF, ZIP, DOC, DOCX, PDF, RAR, PSD,\
-PPT, PPTX, XLS, XLSX, APK
+publish.issue.supportFile=Support file JPG, JPEG, PNG, GIF, ZIP, DOC, DOCX, PDF, RAR, 7z,\
+PPT, PPTX, XLS, XLSX, APK, mp4, mp3, wav
 publish.issue.supportFileTitle=Support file format
 publish.issue.text=Issue details
 publish.issue.title=Issue title(Simple and concise)
